--- a/day01-DOM/05.通过tagName获取元素.html
+++ b/day01-DOM/05.通过tagName获取元素.html
@@ -26,7 +26,7 @@
 
             document:在整个文档中获取
             get:获取
-            ELement:元素(因为id是唯一的，所以元素只可能有1个，所以element是单数)
+            ELements:元素(标签名获取的是复数)
             By：通过
             TagName：标签名
 
