--- a/day06-DOM/04.绑定事件-事件处理函数.html
+++ b/day06-DOM/04.绑定事件-事件处理函数.html
@@ -39,6 +39,11 @@
                     - 参数2：移除当前事件名的哪一个事件函数
                     - 参数3：移除的当前事件是冒泡阶段还是捕获阶段 是一个布尔值
 
+                使用场景：
+                    1.对同一个元素绑定同一个事件多次 不希望被覆盖
+                    2.可以控制捕获或者冒泡
+                    3.DOM2级事件 只能通过事件处理函数绑定（DOMContentLoaded）
+
         */
 
         /* oCon.addEventListener("click", function () {
