--- a/day08-JS高级/06.内存释放.html
+++ b/day08-JS高级/06.内存释放.html
@@ -20,6 +20,11 @@
                 内存,数据, 变量三者之间的关系：
                     内存是用来存放数据的，通过变量才能访问到内存
                     */
+        var a = 1;
+
+        function fn() {
+
+        }
     </script>
 </body>
 
