--- a/day07-DOM/07.懒加载/01.懒加载.html
+++ b/day07-DOM/07.懒加载/01.懒加载.html
@@ -67,8 +67,8 @@
             oOuter.appendChild(newImg)
         })
         var oImgs = document.querySelectorAll('.outer img');
-        //监听滚动条
-        window.onload = window.onscroll = function () {
+
+        function lazyLoad() {
             //获取窗口的高度
             var winHeight = document.documentElement.clientHeight;
             //获取滚动条已经滚动的距离
@@ -82,6 +82,8 @@
                 }
             })
         }
+        //监听滚动条
+        window.onload = window.onscroll = throttle(lazyLoad, 200);
 
 
 
@@ -107,6 +109,27 @@
             return {
                 left: l,
                 top: t
+            }
+        }
+
+
+        //节流函数(高阶函数)
+        function throttle(fn, time) {
+            //绑定事件的时候，先初始化一个上一次的事件
+            var lastTime = 0;
+            //这个函数是事件触发的时候真正调用的事件函数
+            return function () {
+                //这个函数就负责书写看门狗，当允许通过的时候 再调用真正的逻辑代码move
+                var nowTime = Date.now();
+                if (nowTime - lastTime < time) {
+                    return;
+                }
+                lastTime = nowTime;
+
+                //arguments所在的函数就是真正的事件函数，所以拥有实参event  把event事件对象传递给fn move中就可以使用event事件对象了
+                // fn(arguments[0]);
+                //改变了fn的this为事件触发的对象
+                fn.call(this, arguments[0])
             }
         }
     </script>
