--- a/day11-JS高级/02.常见浏览器内核和模块.html
+++ b/day11-JS高级/02.常见浏览器内核和模块.html
@@ -14,7 +14,7 @@
                 支撑浏览器运行的最核心的程序
 
             各个浏览器内核：
-                Chrome, Safari : webkit
+                Chrome, Safari,Opera : webkit
                 firefox : Gecko
                 IE : Trident
                 360,搜狗等国内浏览器: Trident + webkit
