--- a/day12-Less/02.手写call.html
+++ b/day12-Less/02.手写call.html
@@ -35,19 +35,22 @@
             //因为fn1.myCall调用，所以这里的this指向的就是fn1
             //context就是改变之后的上下文对象
             //给context扩展一个方法，这个方法就是fn1,
-            context.fn = this;
+            //给context扩展的方法名要是一个独一无二的值，防止覆盖原有方法
+            var key = Date.now().toString(36);
+            context[key] = this;
             //然后调用context的扩展的这个方法，fn1就会被调用，并且this指向了context
-            var result = eval("context.fn(" + arg.toString() + ")");
+            var result = eval("context[key](" + arg.toString() + ")");
             //此时改变之后的上下文对象context就会多一个方法，所以使用完成之后要删除掉这个方法
-            delete context.fn;
+            delete context[key];
 
             return result;
-
-
         }
 
         var obj = {
-            name: "laowang"
+            name: "laowang",
+            fn: function () {
+                console.log("hello")
+            }
         }
 
         function fn1(a, b) {
