--- a/day13-jQuery01/05.jQ和js对象互换.html
+++ b/day13-jQuery01/05.jQ和js对象互换.html
@@ -28,8 +28,8 @@
         
         */
 
-        var oBox = document.querySelector('.box');
-        $(oBox).css("color", "red");
+        /* var oBox = document.querySelector('.box');
+        $(oBox).css("color", "red"); */
     </script>
 </body>
 
