--- a/day17-BootStrap/02.手写栅格/index.html
+++ b/day17-BootStrap/02.手写栅格/index.html
@@ -1,34 +1,15 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html lang="en">
 
 <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
-    <title>Bootstrap 101 Template</title>
-
-    <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- HTML5 shim 和 Respond.js 是为了让 IE8 支持 HTML5 元素和媒体查询（media queries）功能 -->
-    <!-- 警告：通过 file:// 协议（就是直接将 html 页面拖拽到浏览器中）访问页面时 Respond.js 不起作用 -->
-    <!-- html5shiv 是一个针对 IE 浏览器的 HTML5 JavaScript 补丁，目的是让 IE 识别并支持 HTML5 元素 -->
-    <!-- respond.js是解决ie响应兼容问题的小插件，可以让ie6和ie8支持css3 -->
-    <!--[if lt IE 9]>
-      <script src="https://cdn.jsdelivr.net/npm/html5shiv@3.7.3/dist/html5shiv.min.js"></script>
-      <script src="https://cdn.jsdelivr.net/npm/respond.js@1.4.2/dest/respond.min.js"></script>
-    <![endif]-->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="./index.css">
     <style>
         .container {
-            background-color: pink;
+            background-color: red;
         }
-
-        .container-fluid {
-            background-color: pink;
-        }
-
-        .row>div {}
 
         .row>div>.con {
             height: 200px;
@@ -39,17 +20,11 @@
 </head>
 
 <body>
-    <div class="container">outer</div>
-    <div class="container-fluid">outer</div>
-
     <div class="container">
         <div class="row">
             <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
                 <div class="con"></div>
             </div>
-            <div class="col-lg-2 col-md-3 col-lg-offset-2 col-md-offset-3 col-sm-4 col-xs-6">
-                <div class="con"></div>
-            </div>
             <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
                 <div class="con"></div>
             </div>
@@ -59,10 +34,13 @@
             <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
                 <div class="con"></div>
             </div>
-            <div class="col-lg-push-2 col-lg-2 col-md-3 col-sm-4 col-xs-6">
+            <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
+                <div class="con"></div>
+            </div>
+            <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
                 <div class="con">1</div>
             </div>
-            <div class="col-lg-pull-2 col-lg-2 col-md-3 col-sm-4 col-xs-6">
+            <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
                 <div class="con">2</div>
             </div>
             <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
@@ -203,14 +181,8 @@
             <div class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
                 <div class="con"></div>
             </div>
-
         </div>
     </div>
-    <!-- jQuery (Bootstrap 的所有 JavaScript 插件都依赖 jQuery，所以必须放在前边) -->
-    <script src="https://cdn.jsdelivr.net/npm/jquery@1.12.4/dist/jquery.min.js"></script>
-    <!-- 加载 Bootstrap 的所有 JavaScript 插件。你也可以根据需要只加载单个插件。 -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"></script>
-
 </body>
 
 </html>
