--- a/day21-ES6+/08.generator.html
+++ b/day21-ES6+/08.generator.html
@@ -48,11 +48,11 @@
         function* gen() {
             yield setTimeout(() => {
                 console.log("a");
-                re.next();
+                // re.next();
             }, 2000);
             yield setTimeout(() => {
                 console.log("b");
-                re.next();
+                // re.next();
             }, 1000);
             yield setTimeout(() => {
                 console.log("c");
