--- a/day22-ES6+/04.allSettled.html
+++ b/day22-ES6+/04.allSettled.html
@@ -78,6 +78,14 @@
                 console.log(item.value)
             })
         })
+
+
+
+        (async function () {
+            await open();
+            await XMLSerializer
+            await guan
+        })()
     </script>
 </body>
 
