--- a/day22-ES6+/10.练习.html
+++ b/day22-ES6+/10.练习.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <script async>
+    <script>
         async function fn() {
             const data1 = await new Promise((resolve, reject) => {
                 console.log("a start");
